fixed spacing at the top of the directory

--- a/_scss/_layout.scss
+++ b/_scss/_layout.scss
@@ -671,7 +671,9 @@ nav ul li {
 
     &:nth-child(1) {
       .artist-description {
-        padding-top: 80px;
+        @include mq($until: tablet) {
+          padding-top: 80px;
+        }
       }
     }
 
